--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-fuckasdasdasd
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+	<title>Doc</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
+</head>
+<body>
+	<h1>test</h1>
+	<p>test-test-test</p>
+	<header>
+		<ul>
+			<li>Home</li>
+			
+		</ul>
+		<p>pin pib pil</p>
+	</header>
+</body>
+</html>
